Transfer drop down

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string-array name="bank_array">
+        <item>BTPN</item>
+        <item>Mandiri</item>
+        <item>BCA</item>
+        <item>BNI</item>
+        <item>BRI</item>
+        <item>BTN</item>
+        <item>Danamon</item>
+        <item>Lainnya</item>
+    </string-array>
 </resources>
